fix(styles): adjust styles spacing and color

--- a/src/App.css
+++ b/src/App.css
@@ -13,26 +13,21 @@
   font-size: 35px;
 }
 
-.RowContainer {
-  display: flex;
-  flex-direction: row;
-}
-
 .FormInput {
   color: white;
 }
 
 .CardImage {
-  height: 10vh;
-  width: 10vh;
+  height: 20vh;
+  width: 20vh;
 }
 
-.CustomizeMessage, .Preview {
+.CustomizeContainer {
+  height: 100vh;
+}
+
+.CustomizeMessage, .Preview, .Button {
   padding: 10px;
-}
-
-.Button {
-  padding: 20px;
 }
 
 /***************************************************/
